--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -1,5 +1,7 @@
 <div class="page-container no-select">
   <div class="top-section">
+    <app-title></app-title>
+
     <div class="centered">
       <div class="top-controls">
         <div class="game-controls">
