--- a/src/app/app.html
+++ b/src/app/app.html
@@ -18,7 +18,7 @@
     <button
       mat-menu-item
       (click)="boardUiService.requestUndo()"
-      [disabled]="!(canUndo)"
+      [disabled]="!canUndo"
     >
       <mat-icon>undo</mat-icon>
       Undo
@@ -37,7 +37,7 @@
 
   <button mat-menu-item (click)="toggleColorMode()">
     <mat-icon>{{ currentColorMode.icon }}</mat-icon>
-    {{ currentColorMode.label }} Mode
+    {{ currentColorMode.label }}
   </button>
 
   <button mat-menu-item (click)="versionCheckService.refreshApp()">
