--- a/src/app/component/documentation/documentation.html
+++ b/src/app/component/documentation/documentation.html
@@ -17,7 +17,7 @@
   </p>
   <p>
     The board starts jam-packed with digits, but only some of them
-    <s>some up</s> sum up and belong in the final answer. Your job?
+    <s>some</s> sum up and belong in the final answer. Your job?
     <strong>Sniff out the keepers, whack the impostors</strong>.
   </p>
   <div class="callout">
@@ -38,6 +38,10 @@
     <li>
       Each <strong>color group</strong> must add up to the tiny gray number in
       that group's <strong>top-left cell</strong>.
+    </li>
+    <li>
+      <strong>No mistakes!</strong> Every game can be solved with 0 mistakes, no
+      guessing required.
     </li>
   </ul>
   <p class="note">
