removing grey background from corner number as it wasn't taking effect anymore, and i like the look without it better

--- a/src/app/component/cell/cell.component.html
+++ b/src/app/component/cell/cell.component.html
@@ -26,7 +26,7 @@
     [class.shape]="shapesMode"
     [style.--columnCount]="columnCount"
   >
-    <div class="corner-number bg-muted">
+    <div class="corner-number">
       {{ cell.colorGroupGoalDisplayValue }}
     </div>
     <div
