--- a/src/app/component/documentation/documentation.html
+++ b/src/app/component/documentation/documentation.html
@@ -36,8 +36,8 @@
       <strong>top</strong> of that column.
     </li>
     <li>
-      Each <strong>color group</strong> must add up to the tiny gray number in
-      that group's <strong>top-left cell</strong>.
+      Each <strong>color group</strong> must add up to the tiny number in that
+      group's <strong>top-left cell</strong>.
     </li>
     <li>
       <strong>No mistakes!</strong> Every game can be solved with 0 mistakes, no
