--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -14,7 +14,7 @@
             <mat-icon>do_not_disturb_on</mat-icon>
           </button>
 
-          <mat-form-field class="game-number">
+          <mat-form-field class="game-number" subscriptSizing="dynamic">
             <mat-label>Game #</mat-label>
             <input
               matInput
