style: title wasn't centered

--- a/src/app/component/title/title.scss
+++ b/src/app/component/title/title.scss
@@ -6,6 +6,7 @@
   font-weight: 900;
   line-height: unset;
   letter-spacing: 0.5em;
+  text-indent: 0.5em;
   white-space: nowrap;
   background: linear-gradient(0deg, light-dark(#acacac, #7d7d7d), var(--mat-sys-on-surface));
   background-clip: text;
