refactoring stats calculation location

--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -54,14 +54,7 @@
         </div>
 
         <div class="stats">
-          <app-stats
-            [mistakes]="mistakes"
-            [streak]="streak"
-            [previousStreak]="previousStreak"
-            [longestStreak]="longestStreak"
-            [accuracy]="accuracy"
-            [accuracyHistory]="accuracyHistory"
-          ></app-stats>
+          <app-stats [stats]="stats"></app-stats>
         </div>
       </div>
     </div>
