removing button to finish board with mistakes as it wasn't implemented

--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -38,16 +38,9 @@
               <button
                 matMiniFab
                 class="game-button"
-                (click)="autoCompleteGame(0)"
+                (click)="autoCompleteGame()"
               >
                 <mat-icon>auto_fix_high</mat-icon>
-              </button>
-              <button
-                matMiniFab
-                class="game-button"
-                (click)="autoCompleteGame(2)"
-              >
-                <mat-icon>auto_fix_off</mat-icon>
               </button>
             </div>
           }
