--- a/src/app/component/settings/settings.html
+++ b/src/app/component/settings/settings.html
@@ -40,23 +40,5 @@
     </button>
   </section>
 
-  @if (devModeEnabled) {
-    <section class="settings-section">
-      <h2>Developer Settings</h2>
-      <mat-form-field>
-        <mat-label>Gesture Recognizer</mat-label>
-        <mat-select
-          [(ngModel)]="gestureMode"
-          (ngModelChange)="onGestureModeChange()"
-        >
-          <mat-option value="HAMMER">Hammer</mat-option>
-          <mat-option value="CUSTOM">Custom</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <p>
-        Choose the gesture recognition library to use. "Hammer" uses Hammer.js,
-        while "Custom" uses a custom implementation.
-      </p>
-    </section>
-  }
+  @if (devModeEnabled) {}
 </div>
