--- a/src/app/component/cell/cell.component.html
+++ b/src/app/component/cell/cell.component.html
@@ -18,7 +18,7 @@
 
 <ng-template #standardCellContent let-isMagnifiedView="isMagnifiedView">
   <div
-    class="cell cell-bg cell-fade color-{{ cell.groupNumber }}"
+    class="cell cell-bg cell-fade color shape-{{ cell.groupNumber }}"
     [class.wiggle]="cell.invalidMove"
     [class.hidden]="cell.hideBackground"
     [class.processing]="cell.processing && !isMagnifiedView"
