showing layout of previously completed boards

--- a/src/app/component/board/board.html
+++ b/src/app/component/board/board.html
@@ -53,12 +53,26 @@
     </div>
   </div>
 
-  @if (showNextGameButton) {
-    <div class="next-game-container">
-      <button mat-fab extended (click)="platNextUnfinishedGame()">
-        <mat-icon>skip_next</mat-icon>
-        Next Game
-      </button>
+  @if (nextGameButtonState !== "hidden") {
+    <div
+      class="next-game-container"
+      [class.animate]="nextGameButtonState === 'show-animated'"
+    >
+      @if (nextGameButtonState === "show-instant") {
+        <h2>Game {{ gameNumber }} Already Played.</h2>
+      }
+
+      <div>
+        <button matFab extended (click)="playGameAgain()">
+          <mat-icon>sports_esports</mat-icon>
+          Play Game {{ gameNumber }} Again
+        </button>
+        &nbsp;&nbsp;
+        <button matFab extended (click)="platNextUnfinishedGame()">
+          <mat-icon>skip_next</mat-icon>
+          Next Game
+        </button>
+      </div>
     </div>
   }
 
@@ -73,78 +87,56 @@
 
   <div class="game-board-section">
     <div class="container">
-      @if (gamePreviouslyCompleted) {
-        <div class="previously-completed">
-          <h2>Game {{ gameNumber }} Already Played.</h2>
-
-          <div>
-            <button matFab extended (click)="playGameAgain()">
-              <mat-icon>sports_esports</mat-icon>
-              Play Game {{ gameNumber }} Again
-            </button>
-            &nbsp;&nbsp;
-            <button matFab extended (click)="platNextUnfinishedGame()">
-              <mat-icon>skip_next</mat-icon>
-              Next Game
-            </button>
-          </div>
-        </div>
-      } @else {
-        <table class="game-table">
-          @for (
-            row of gameBoard.fullBoard;
-            track $index;
-            let rowIndex = $index
-          ) {
-            <tr>
-              @for (cell of row; track $index; let colIndex = $index) {
-                <td
-                  [class.shape-border-top]="
-                    shapesMode && !cell?.hideBackground && cell?.borderTop
-                  "
-                  [class.shape-border-left]="
-                    shapesMode && !cell?.hideBackground && cell?.borderLeft
-                  "
-                  [class.shape-border-right]="
-                    shapesMode && !cell?.hideBackground && cell?.borderRight
-                  "
-                  [class.shape-border-bottom]="
-                    shapesMode && !cell?.hideBackground && cell?.borderBottom
-                  "
-                >
-                  @if (rowIndex === 0 && colIndex === 0) {
-                    <app-cell
-                      [displayType]="'blank'"
-                      [columnCount]="columnCount"
-                      [shapesMode]="shapesMode"
-                    ></app-cell>
-                  } @else if (
-                    rowIndex === 0 || (rowIndex > 0 && colIndex === 0)
-                  ) {
-                    <app-cell
-                      [displayType]="'header'"
-                      [cell]="cell"
-                      [columnCount]="columnCount"
-                      [shapesMode]="shapesMode"
-                      [disableAnimation]="disableAnimations"
-                    ></app-cell>
-                  } @else {
-                    <app-cell
-                      [displayType]="'standard'"
-                      [cell]="cell"
-                      [columnCount]="columnCount"
-                      [shapesMode]="shapesMode"
-                      [disableAnimation]="disableAnimations"
-                      (used)="use($event)"
-                      (cleared)="clear($event)"
-                    ></app-cell>
-                  }
-                </td>
-              }
-            </tr>
-          }
-        </table>
-      }
+      <table class="game-table">
+        @for (row of gameBoard.fullBoard; track $index; let rowIndex = $index) {
+          <tr>
+            @for (cell of row; track $index; let colIndex = $index) {
+              <td
+                [class.shape-border-top]="
+                  shapesMode && !cell?.hideBackground && cell?.borderTop
+                "
+                [class.shape-border-left]="
+                  shapesMode && !cell?.hideBackground && cell?.borderLeft
+                "
+                [class.shape-border-right]="
+                  shapesMode && !cell?.hideBackground && cell?.borderRight
+                "
+                [class.shape-border-bottom]="
+                  shapesMode && !cell?.hideBackground && cell?.borderBottom
+                "
+              >
+                @if (rowIndex === 0 && colIndex === 0) {
+                  <app-cell
+                    [displayType]="'blank'"
+                    [columnCount]="columnCount"
+                    [shapesMode]="shapesMode"
+                  ></app-cell>
+                } @else if (
+                  rowIndex === 0 || (rowIndex > 0 && colIndex === 0)
+                ) {
+                  <app-cell
+                    [displayType]="'header'"
+                    [cell]="cell"
+                    [columnCount]="columnCount"
+                    [shapesMode]="shapesMode"
+                    [disableAnimation]="disableAnimations"
+                  ></app-cell>
+                } @else {
+                  <app-cell
+                    [displayType]="'standard'"
+                    [cell]="cell"
+                    [columnCount]="columnCount"
+                    [shapesMode]="shapesMode"
+                    [disableAnimation]="disableAnimations"
+                    (used)="use($event)"
+                    (cleared)="clear($event)"
+                  ></app-cell>
+                }
+              </td>
+            }
+          </tr>
+        }
+      </table>
     </div>
   </div>
 </div>
