adding version to settings page

--- a/src/app/component/documentation/documentation.html
+++ b/src/app/component/documentation/documentation.html
@@ -4,7 +4,7 @@
   <h1>How to Play</h1>
 </div>
 
-<div class="page">
+<div class="page overscroll">
   <p>
     Welcome to <em>Some Numbers</em>, or as Tony calls 'em, "Somebers". Though
     that's usually only after he's had somebe... Ahh, you know what?
