--- a/src/app/component/settings/settings.html
+++ b/src/app/component/settings/settings.html
@@ -1,4 +1,4 @@
-<div class="settings-container">
+<div class="settings-container overscroll">
   <h1 class="settings-title">Settings</h1>
 
   <section class="settings-section">
@@ -57,3 +57,5 @@
 
   @if (devModeEnabled) {}
 </div>
+
+<div class="version">v. {{ AppVersion.VERSION }}</div>
