--- a/src/app/component/settings/settings.scss
+++ b/src/app/component/settings/settings.scss
@@ -1,4 +1,3 @@
-
 .settings-container {
   padding: 20px;
 }
@@ -22,4 +21,8 @@ mat-form-field {
   max-width: 400px;
   display: block;
   margin-bottom: 10px;
+}
+
+.version {
+  margin-bottom: 15px;
 }
